--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "# set up the line list for the true spectral model\n",
+    "# set up the true line list for the true spectral model\n",
     "x_margin = 1.e6/c # hoping no velocities are bigger than 1000 km/s\n",
     "x_range = x_max - x_min + 2. * x_margin # make lines in a bigger x range than the data range\n",
     "nlines = np.random.poisson(x_range * lines_per_x) # set the total number of lines\n",
@@ -120,10 +120,10 @@
     "def ivar(ys, continuum_ivar):\n",
     "    return continuum_ivar / ys\n",
     "\n",
-    "def noisy_true_spectrum(xs, doppler, continuum_ivar):\n",
+    "def noisy_true_spectrum(xs, doppler, continuum_ivar, lxs=line_xs, ews=line_ews):\n",
     "    \"\"\"\n",
     "    \"\"\"\n",
-    "    ys_true = true_spectrum(xs, doppler)\n",
+    "    ys_true = true_spectrum(xs, doppler, lxs=lxs, ews=ews) \n",
     "    y_ivars = ivar(ys_true, continuum_ivar)\n",
     "    return  ys_true + np.random.normal(size=xs.shape) / np.sqrt(y_ivars), y_ivars\n",
     "\n",
@@ -813,8 +813,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make and add wavelength calibration issues\n",
-    "noisyxs = xs[None, :] + 0.001 * Delta_x * np.random.normal(size=ys.shape)"
+    "# make and add thousandth-of-a-pixel parabolic wavelength calibration issues\n",
+    "x_distortion = (xs - np.mean(xs)) / (np.max(xs) - np.min(xs)) ** 2\n",
+    "x_noises = 0.001 * Delta_x * x_distortion[None, :] * \\\n",
+    "    np.random.normal(size=len(ys))[:, None] # magic\n",
+    "calib_ys = np.zeros_like(ys)\n",
+    "for j in range(n_epochs):\n",
+    "    calib_ys[j], _ = noisy_true_spectrum(xs + x_noises[j], true_dopplers[j],\n",
+    "                                         continuum_ivar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get all the CCF RVs for all epochs\n",
+    "best_calib_ccf_dopplers = get_all_ccf_rvs(calib_ys, xs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_resids(c * (best_calib_ccf_dopplers - true_dopplers))\n",
+    "plt.title(\"calibration-noise-contaminated data\")\n",
+    "plt.savefig(\"calibration.png\")"
    ]
   },
   {
@@ -825,7 +852,13 @@
    },
    "outputs": [],
    "source": [
-    "# make and add unmodeled telluric issues"
+    "# make and add unmodeled telluric issues\n",
+    "telluric_lines_per_x = 16000. # magic\n",
+    "telluric_nlines = np.random.poisson(x_range * telluric_lines_per_x)\n",
+    "telluric_line_xs = (x_min - x_margin) + x_range * np.random.uniform(size=nlines)\n",
+    "telluric_line_ews = np.zeros_like(telluric_line_xs) + 3.e-7 # magic\n",
+    "telluric_spectrum = true_spectrum(xs, 0.0, lxs=telluric_line_xs,\n",
+    "                                  ews=telluric_line_ews)"
    ]
   },
   {
@@ -834,8 +867,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make and introduce variations in spectral line strengths"
+    "fig, axes = plt.subplots(2, 1, sharex=False, sharey=True)\n",
+    "for ax in axes:\n",
+    "    ax.set_ylabel(r\"flux $y$\")\n",
+    "    ax.plot(xs, true_spectrum(xs, 0.), \"r-\", alpha=0.5, lw=1)\n",
+    "    ax.plot(xs, telluric_spectrum, \"b-\", alpha=0.5, lw=1)\n",
+    "    ax.ticklabel_format(useOffset=False)\n",
+    "axes[0].set_xlim(8.700, 8.701)\n",
+    "axes[1].set_xlim(8.702, 8.703)\n",
+    "axes[0].set_ylim(-0.1, 1.1)\n",
+    "axes[1].set_xlabel(r\"ln wavelength $x=\\ln\\,\\lambda$\")\n",
+    "axes[0].set_title(r\"unmodeled telluric component\")\n",
+    "fig.savefig(\"telluricmodel.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get all the CCF RVs for all epochs\n",
+    "best_telluric_ccf_dopplers = get_all_ccf_rvs(ys * telluric_spectrum[None,:], xs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_resids(c * (best_telluric_ccf_dopplers - true_dopplers))\n",
+    "plt.title(\"telluric-contaminated data\")\n",
+    "plt.savefig(\"telluric.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make and introduce variations in spectral line strengths\n",
+    "variable_ys = np.zeros_like(ys)\n",
+    "for j in range(n_epochs):\n",
+    "    ew_variations = 1. + 0.01 * np.random.normal(size=line_ews.shape)\n",
+    "    variable_ys[j], _ = noisy_true_spectrum(xs + x_noises[j], true_dopplers[j],\n",
+    "                                            continuum_ivar,\n",
+    "                                            ews=line_ews * ew_variations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get all the CCF RVs for all epochs\n",
+    "best_variable_ccf_dopplers = get_all_ccf_rvs(variable_ys, xs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_resids(c * (best_variable_ccf_dopplers - true_dopplers))\n",
+    "plt.title(\"spectral-variability-contaminated data\")\n",
+    "plt.savefig(\"variable.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
