change details of calibration model

--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -814,8 +814,8 @@
    "outputs": [],
    "source": [
     "# make and add thousandth-of-a-pixel parabolic wavelength calibration issues\n",
-    "x_distortion = (xs - np.mean(xs)) / (np.max(xs) - np.min(xs)) ** 2\n",
-    "x_noises = 0.001 * Delta_x * x_distortion[None, :] * \\\n",
+    "x_distortion = np.sin(2 * np.pi * (xs - np.mean(xs)) / (np.max(xs) - np.min(xs)))\n",
+    "x_noises = 0.1 * Delta_x * x_distortion[None, :] * \\\n",
     "    np.random.normal(size=len(ys))[:, None] # magic\n",
     "calib_ys = np.zeros_like(ys)\n",
     "for j in range(n_epochs):\n",
