--- a/notebook/how_to_measure_RV.ipynb
+++ b/notebook/how_to_measure_RV.ipynb
@@ -813,10 +813,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make and add thousandth-of-a-pixel parabolic wavelength calibration issues\n",
+    "# make and add tenth-of-a-pixel sinusoidal wavelength calibration issues\n",
     "x_distortion = np.sin(2 * np.pi * (xs - np.mean(xs)) / (np.max(xs) - np.min(xs)))\n",
     "x_noises = 0.1 * Delta_x * x_distortion[None, :] * \\\n",
-    "    np.random.normal(size=len(ys))[:, None] # magic\n",
+    "    np.random.normal(size=len(ys))[:, None] # magic 0.1\n",
     "calib_ys = np.zeros_like(ys)\n",
     "for j in range(n_epochs):\n",
     "    calib_ys[j], _ = noisy_true_spectrum(xs + x_noises[j], true_dopplers[j],\n",
